csd-datamodel/src/objects/Time_Management__c.object
<CustomObject>
    <fields>
        <fullName>Comune_di_Destinazione__c</fullName>
        <label>Comune di Destinazione</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Regione_di_Destinazione__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Provincia</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comune_di_Partenza__c</fullName>
        <label>Comune di Partenza</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Regione_di_Partenza__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Provincia</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Costo__c</fullName>
        <label>Costo</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Data_Giustificativo__c</fullName>
        <label>Data Giustificativo</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dipendente__c</fullName>
        <label>Dipendente</label>
        <referenceTo>Dipendente__c</referenceTo>
        <relationshipLabel>Time Management</relationshipLabel>
        <relationshipName>Time_Management</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Fine_Trasferta__c</fullName>
        <label>Fine Trasferta</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Giustificativo__c</fullName>
        <label>Giustificativo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Congedo Matrimoniale</fullName>
                </value>
                <value>
                    <fullName>Donazione Midollo Osseo</fullName>
                </value>
                <value>
                    <fullName>Donazione Sangue</fullName>
                </value>
                <value>
                    <fullName>Ferie Anno in Corso</fullName>
                </value>
                <value>
                    <fullName>Funzioni Elettorali</fullName>
                </value>
                <value>
                    <fullName>Fuori Sede per Servizi</fullName>
                </value>
                <value>
                    <fullName>Lavoro Agile per Emergenza</fullName>
                </value>
                <value>
                    <fullName>Malattia ad Ore</fullName>
                </value>
                <value>
                    <fullName>Ore Viaggio</fullName>
                </value>
                <value>
                    <fullName>Reperibilità</fullName>
                </value>
                <value>
                    <fullName>Ritardo</fullName>
                </value>
                <value>
                    <fullName>Sciopero Locale</fullName>
                </value>
                <value>
                    <fullName>Sciopero Nazionale</fullName>
                </value>
                <value>
                    <fullName>Uscita Anticipata</fullName>
                </value>
                <value>
                    <fullName>Visita Idoneità ENEL</fullName>
                </value>
                <value>
                    <fullName>Visita INAIL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inizio_Trasferta__c</fullName>
        <label>Inizio Trasferta</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Mezzo_di_trasporto__c</fullName>
        <label>Mezzo di trasporto</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Aereo</fullName>
                </value>
                <value>
                    <fullName>Aliscafo</fullName>
                </value>
                <value>
                    <fullName>Autobus</fullName>
                </value>
                <value>
                    <fullName>Automobile</fullName>
                </value>
                <value>
                    <fullName>Space shuttle</fullName>
                </value>
                <value>
                    <fullName>Traghetto</fullName>
                </value>
                <value>
                    <fullName>Treno</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>Note</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regione_di_Destinazione__c</fullName>
        <label>Regione di Destinazione</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Regione</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Regione_di_Partenza__c</fullName>
        <label>Regione di Partenza</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Regione</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Spesa_da_Autorizzare__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Spesa da Autorizzare</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Time Management</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Status__c</columns>
        <columns>Dipendente__c</columns>
        <columns>Note__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TM-{0000}</displayFormat>
        <label>Time Management Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Management</pluralLabel>
    <recordTypes>
        <fullName>Cartellino</fullName>
        <active>true</active>
        <label>Cartellino</label>
    </recordTypes>
    <recordTypes>
        <fullName>Nota_Spese</fullName>
        <active>true</active>
        <label>Nota Spese</label>
    </recordTypes>
    <recordTypes>
        <fullName>Trasferte</fullName>
        <active>true</active>
        <label>Trasferte</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CheckInizioFineTrasferta</fullName>
        <active>true</active>
        <errorConditionFormula>Inizio_Trasferta__c &gt;  Fine_Trasferta__c</errorConditionFormula>
        <errorDisplayField>Inizio_Trasferta__c</errorDisplayField>
        <errorMessage>Controlla le date di inizio e fine Trasferta</errorMessage>
    </validationRules>
</CustomObject>